--- a/04. Components (Basic Idea)/react-calculator/.vscode/settings.json
+++ b/04. Components (Basic Idea)/react-calculator/.vscode/settings.json
@@ -1,23 +1,23 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#b300b3",
-        "activityBar.background": "#b300b3",
+        "activityBar.activeBackground": "#003400",
+        "activityBar.background": "#003400",
         "activityBar.foreground": "#e7e7e7",
         "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#9f9f00",
-        "activityBarBadge.foreground": "#88bb22cc",
+        "activityBarBadge.background": "#4040ff",
+        "activityBarBadge.foreground": "#e7e7e7",
         "commandCenter.border": "#e7e7e799",
-        "sash.hoverBorder": "#b300b3",
-        "sideBar.border": "#b300b3",
-        "statusBar.background": "#800080",
+        "sash.hoverBorder": "#003400",
+        "sideBar.border": "#003400",
+        "statusBar.background": "#000100",
         "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#b300b3",
-        "statusBarItem.remoteBackground": "#800080",
+        "statusBarItem.hoverBackground": "#003400",
+        "statusBarItem.remoteBackground": "#000100",
         "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#800080",
+        "titleBar.activeBackground": "#000100",
         "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#80008099",
+        "titleBar.inactiveBackground": "#00010099",
         "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "#800080"
+    "peacock.color": "#000100"
 }
